<resources>
    <string name="app_name">MiniTikTok</string>
    <string name="home_button_text">首页</string>
    <string name="samecity_button_text">探索</string>
    <string name="message_text">消息</string>
    <string name="me_text">我</string>
    <string name="add_video_btn_content_text">发布视频</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="start_recording">开始录制</string>
    <string name="end_recording">停止录制</string>
    <string name="video_upload">发布</string>
    <string name="video_cancel_upload">取消上传</string>
    <string name="fensi_text">粉丝</string>
    <string name="guanzhu_text">关注</string>
    <string name="huozan_text">获赞</string>
    <string name="video_next_step">下一步</string>
    <string name="prompt_upload_input">不分享点什么吗？</string>
</resources>
