<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:clipChildren="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".activity.MainActivity">


    <FrameLayout
        android:id="@+id/frame_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tabBar" />

    <LinearLayout
        android:id="@+id/tabBar"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        >

        <TextView
            android:id="@+id/home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/home_button_text"
            android:textColor="@color/color_text_darker" />
        <TextView
            android:id="@+id/same_city"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textColor="@color/color_text_darker"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/samecity_button_text"/>
        <ImageView
            android:id="@+id/add_video_btn"
            android:layout_width="56dp"
            android:layout_height="36dp"
            android:background="@mipmap/add_video_button"
            android:contentDescription="@string/add_video_btn_content_text" />
        <TextView
            android:id="@+id/message"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textColor="@color/color_text_darker"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/message_text"/>
        <TextView
            android:id="@+id/me"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textColor="@color/color_text_darker"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/me_text"/>
    </LinearLayout>

</RelativeLayout>